texture alignment fix

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 
 #texture {
 	z-index: 3;
-	margin-left: -29.99vw;	
+	margin-left: -30.2vw;	
 	position: relative;
 }
 
